[package]
name = "frame_view_tools"
description = "A small tool to quickly get some info form FrameView csv files"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
csv = "1.1.6"
dialoguer = "0.10.2"
rayon = "1.5.3"
serde = { version = "1.0.143", features = ["derive"] }
serde_with = "2.0.0"
tokio = { version = "1.20.1", features = ["full"] }

[build]
rustflags = ["-C", "target-cpu=native"]

[profile.release]
opt-level = 3
lto = "thin"

[profile.release-full-lto]
inherits = "release"
lto = true